force-app/force-app/force-app/main/default/objects/Products_Targeted__c/Products_Targeted__c.object-meta.xml
<CustomObject>
    <label>Products Targeted</label>
    <nameField>
        <displayFormat>PT-{0000}</displayFormat>
        <label>Product Targeted</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products Targeted</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>