force-app/force-app/force-app/main/default/objects/Products_Targeted__c/fields/Average_Replacment_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Average_Replacment_Cycle__c</fullName>
    <label>Average Replacment Cycle</label>
    <length>100</length>
    <type>Text</type>
</CustomField>