force-app/force-app/force-app/main/default/objects/Products_Targeted__c/fields/Competitor_Brands_Used__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Brands_Used__c</fullName>
    <label>Competitor Brands Used</label>
    <length>100</length>
    <type>Text</type>
</CustomField>