force-app/force-app/force-app/main/default/objects/Products_Targeted__c/fields/Competitor_Prdt_Perfmce_feedback__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Prdt_Perfmce_feedback__c</fullName>
    <label>Competitor Prdt Perfmce feedback</label>
    <length>100</length>
    <type>Text</type>
</CustomField>