force-app/force-app/force-app/main/default/objects/Products_Targeted__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Products Targeted</relationshipLabel>
    <relationshipName>Products_Targeted</relationshipName>
    <type>Lookup</type>
</CustomField>