force-app/force-app/force-app/main/default/objects/Products_Targeted__c/fields/DBW_IPT_Tyre_IPT_TTF_BT_FLAP__c.field-meta.xml
<CustomField>
    <fullName>DBW_IPT_Tyre_IPT_TTF_BT_FLAP__c</fullName>
    <label>DBW/IPT-Tyre/IPT-TTF/BT/FLAP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>