force-app/force-app/force-app/main/default/objects/Products_Targeted__c/fields/Load_Handled_High_low_Medium__c.field-meta.xml
<CustomField>
    <fullName>Load_Handled_High_low_Medium__c</fullName>
    <label>Load Handled -High/low/Medium</label>
    <length>100</length>
    <type>Text</type>
</CustomField>