force-app/force-app/force-app/main/default/objects/Products_Targeted__c/fields/Material_Handled__c.field-meta.xml
<CustomField>
    <fullName>Material_Handled__c</fullName>
    <label>Material Handled</label>
    <length>100</length>
    <type>Text</type>
</CustomField>