force-app/force-app/force-app/main/default/objects/Products_Targeted__c/fields/Our_Product_Brand_Perception__c.field-meta.xml
<CustomField>
    <fullName>Our_Product_Brand_Perception__c</fullName>
    <label>Our Product/Brand Perception</label>
    <length>100</length>
    <type>Text</type>
</CustomField>