force-app/force-app/force-app/main/default/objects/Products_Targeted__c/fields/Our_Product_Performance_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Our_Product_Performance_Feedback__c</fullName>
    <label>Our Product Performance Feedback</label>
    <length>100</length>
    <type>Text</type>
</CustomField>