force-app/force-app/force-app/main/default/objects/Products_Targeted__c/fields/Payment_Track_Record__c.field-meta.xml
<CustomField>
    <fullName>Payment_Track_Record__c</fullName>
    <label>Payment Track Record</label>
    <length>100</length>
    <type>Text</type>
</CustomField>