force-app/force-app/force-app/main/default/objects/Products_Targeted__c/fields/Performance_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Performance_Expectations__c</fullName>
    <label>Performance Expectations</label>
    <length>100</length>
    <type>Text</type>
</CustomField>