force-app/force-app/force-app/main/default/objects/Products_Targeted__c/fields/PRESS_Fitment_Fixt_PU_Others__c.field-meta.xml
<CustomField>
    <fullName>PRESS_Fitment_Fixt_PU_Others__c</fullName>
    <label>PRESS/Fitment Fixt/PU/Others</label>
    <length>100</length>
    <type>Text</type>
</CustomField>