force-app/force-app/force-app/main/default/objects/Products_Targeted__c/fields/Pricing_Consideration__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Consideration__c</fullName>
    <label>Pricing Consideration</label>
    <length>100</length>
    <type>Text</type>
</CustomField>