force-app/force-app/force-app/main/default/objects/Products_Targeted__c/fields/Procurement_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Cycle__c</fullName>
    <label>Procurement Cycle</label>
    <length>100</length>
    <type>Text</type>
</CustomField>