force-app/force-app/force-app/main/default/objects/Products_Targeted__c/fields/SRT_SRT_TWA_POB_POB_TWA__c.field-meta.xml
<CustomField>
    <fullName>SRT_SRT_TWA_POB_POB_TWA__c</fullName>
    <label>SRT /SRT-TWA/POB /POB-TWA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>