force-app/force-app/force-app/main/default/objects/Products_Targeted__c/fields/Usage_Continuous_Intermittent__c.field-meta.xml
<CustomField>
    <fullName>Usage_Continuous_Intermittent__c</fullName>
    <label>Usage -Continuous/Intermittent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>