force-app/force-app/force-app/main/default/objects/Products_Targeted__c/fields/Work_Environment__c.field-meta.xml
<CustomField>
    <fullName>Work_Environment__c</fullName>
    <label>Work Environment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>