force-app/force-app/force-app/main/default/objects/Products_Targeted__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Contact__c</columns>
    <columns>Average_Replacment_Cycle__c</columns>
    <columns>Competitor_Brands_Used__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>